# DS_LOD_and_Knowledge_Graphs_2023_Tobias_Jennert_Melanie_Ullrich

./: Expose.md  LISCENSE.md  README.md  pyproject.toml
data/: abstracts.txt
data/abstract_input/: abstracts.txt
data/abstract_output/: chunks.csv  graph.csv  graph_processed.csv
docs/: index.html
scripts/: extract_graph_data.py  get_data.py  main.py  ollama.py  ollama_client.py  prompts.py  text_procesing.py  text_processing.py
scripts/helpers/: df_helpers.py
